[tool.poetry]
name = "identicon"
version = "0.1.0"
description = ""
authors = ["Ervin Canigur <ervin@canigur.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^9.4.0"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
